@@ -1,5 +1,8 @@
 Revision history for Dancer2::Plugin::PrometheusTiny
 
+
+    * Switch from Dancer2::Core::Types to Types::Standard for D2 < 0.205000
+
 0.003 - 2021-06-20
 
     * test fix only
